styles: improve queue display